Make sure process widget doesn't get stuck. Enforce maximum height on process widget.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@136 7d457c2a-affb-35e4-300a-418c747d4874

--- a/src/main/webapp/styles/process.css
+++ b/src/main/webapp/styles/process.css
@@ -8,6 +8,8 @@
 .process-panel-inner {
     border: 1px solid #ccc;
     width: 500px;
+    max-height: 70px;
+    overflow: auto;
     padding: 10px;
     background: #fffee0;
     margin: 0 auto;
